--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <title>Expenses chart component</title>
-  <link rel="stylesheet" href="src/style/style.css">
+  <link rel="stylesheet" href="src/style/styles.css">
 </head>
 <body class="grid place-content-center min-h-screen font-dmsans bg-neutral-cream">
   <div class="flex flex-col gap-4 max-w-xs lg:max-w-lg">
