--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="grid place-content-center min-h-screen font-dmsans bg-neutral-cream">
   <div class="flex flex-col gap-4 max-w-xs lg:max-w-lg">
-      <header class="flex justify-between p-4 bg-primary-red rounded-xl">
+      <header class="flex justify-between p-6 bg-primary-red rounded-xl">
         <div class="flex gap-2 flex-col text-neutral-cream">
           <p>My balance</p>
           <p class="font-bold text-3xl">$<span id="b-total">0.00</span></p>
@@ -19,10 +19,10 @@
         </div>
       </header>
 
-      <main class="flex flex-col gap-4 bg-neutral-pale-orange p-4 rounded-xl">
+      <main class="flex flex-col gap-4 bg-neutral-pale-orange p-6 rounded-xl">
         <h1 class="font-bold text-xl">Spending - Last 7 days</h1>
 
-        <div id="graph-wrapper" class="relative z-1 my-6 flex justify-around items-end mb-6 min-h-min"></div>
+        <div id="graph-wrapper" class="relative z-1 my-6 grid grid-cols-7 justify-items-center items-end mb-6 min-h-min"></div>
 
         <hr class="border-1">
       
@@ -39,7 +39,7 @@
     </main>
 </body>
 <template id="graph-bar-template">
-  <div class="relative flex flex-col justify-center w-8 gap-1">
+  <div class="relative flex flex-col justify-center w-8 lg:w-10 gap-1">
     <div class="bar order-1 peer bg-primary-red rounded-sm hover:opacity-60"></div>
     <p class="date order-2 text-xs text-neutral-medium-brown text-center"></p>
     <span class="amount order-0 self-center absolute z-[-1] top-[-30px] p-1 rounded-sm text-neutral-pale-orange text-center text-xs peer-hover:bg-black peer-hover:z-10"></span>
